--- a/index.html
+++ b/index.html
@@ -24,25 +24,26 @@
             <div class="bttn">
                 <button type="button" id="MileageBtn" onclick="calculateMileage()">Calculate Mileage</button>
             </div>
-
-            <div class="mileage" id="mileageOutput">Mileage: 0.00 km/litre</div>
-
+            <div class="output">
+                <div class="mileage" id="mileageOutput">Mileage: 0.00 km/litre</div>
+            </div>
         </div>
         <div class="bottom">
             <h1 style="text-align: center;">Vehicle Fuel Spent Calculator</h1>
             <div class="data-2">
-                <input type="number"  id="distanceDriven" placeholder="Total Distance Driven (km)">
-                <input type="number"  id="fualPrice" placeholder="Avarage Fuel Price/Liter">
-                <input type="number"  id="mileage" placeholder="Avarage Mileage">
+                <input type="number" id="distanceDriven" placeholder="Total Distance Driven (km)">
+                <input type="number" id="fualPrice" placeholder="Avarage Fuel Price/Liter">
+                <input type="number" id="mileage" placeholder="Avarage Mileage">
             </div>
             <div class="spent">
                 <button type="button" id="priceBtn" onclick="spentPrice()">Calculate Spent Price</button>
             </div>
 
-            <div class="price" id="priceOutput" >Price: 0 Rs</div>
-        </div>
+            <div class="output">
+                <div class="price" id="priceOutput">Price: 0 Rs</div>
+            </div>
 
-    </div>
+        </div>
 
 
 
