--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Mileage Calculator</title>
+    <link rel="icon" href="https://static.vecteezy.com/system/resources/previews/009/653/576/non_2x/gas-station-icon-logo-illustration-fuel-pump-symbol-template-for-graphic-and-web-design-collection-free-vector.jpg" type="image/x-icon">
     <link href="style.css" rel="stylesheet">
 </head>
 
